--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -4,9 +4,9 @@
 @import 'registry';
 @import 'tabs';
 @import 'external_link';
-@import 'dark-adjustments';
 @import 'td/color-adjustments-dark';
 @import 'td/code-dark';
+@import 'dark-adjustments';
 @import 'td/gcs-search-dark';
 @import '_page_no_left_sidebar';
 
@@ -95,6 +95,54 @@
 }
 
 .td-navbar {
+  $navbar-nav-link-color-active: $gray-100;
+  // Slightly dim base / non-active nav links:
+  $navbar-nav-link-color-base: $gray-400;
+
+  background-color: $primary-darker;
+
+  // On the home page, color all nav links as if active.
+  @at-root .td-home & {
+    .nav-link {
+      color: $navbar-nav-link-color-active;
+    }
+  }
+
+  //--------------------------------
+  // TODO: upstream to Docsy
+  // Improve color contrast DRAFT
+  .nav-link {
+    color: $navbar-nav-link-color-base;
+
+    &.active {
+      // Actually, give the active nav link a hover tint instead of
+      // $navbar-nav-link-color-active.
+      color: tint-color($navbar-dark-hover-color, 50%);
+      text-decoration: $link-decoration;
+    }
+
+    &:hover {
+      color: var(--bs-navbar-hover-color); // default
+    }
+
+    &:focus,
+    // Bootstrap sets .nav-link:focus-visible, but in a way that isn't
+    // compatible with dark mode. This is a known issue, see
+    // https://github.com/twbs/bootstrap/issues/37549:
+    //
+    // > [ ] Docs navbar blue focus visible is almost invisible!
+    //
+    // Fallback to browser default:
+    &:focus-visible {
+      outline: revert;
+      box-shadow: none;
+    }
+  }
+  .td-search:not(:focus-within) {
+    color: $gray-200;
+  }
+  //--------------------------------
+
   .navbar-brand {
     @include media-breakpoint-up(md) {
       padding: 0;
