--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -82,7 +82,7 @@
 
     // Hide navbar search on homepage (hero search is used instead)
     .td-navbar__search {
-      display: none;
+      display: none !important;
     }
   }
 
