--- a/layouts/_shortcodes/homepage/signal.html
+++ b/layouts/_shortcodes/homepage/signal.html
@@ -12,7 +12,7 @@
     {{- end -}}
   </div>
   <div class="signal-card__name">{{ $name }}</div>
-  {{ with .Inner }}
-  <div class="signal-card__description">{{ . | markdownify }}</div>
-  {{ end }}
+  {{- with .Inner }}
+  <div class="signal-card__description">{{ . | $.Page.RenderString }}</div>
+  {{- end }}
 </a>
