--- a/layouts/_shortcodes/homepage/hero.html
+++ b/layouts/_shortcodes/homepage/hero.html
@@ -1,7 +1,11 @@
-{{ $color := .Get "color" | default "primary" -}}
-{{ $tagline := .Get "tagline" -}}
-{{ $useLogo := .Get "useLogo" | default false -}}
-{{ $background := .Get "background" -}}
+{{- $color := .Get "color" | default "primary" -}}
+{{- $tagline := .Get "tagline" -}}
+{{- $useLogo := .Get "useLogo" | default false -}}
+{{- $background := .Get "background" -}}
+{{- $primaryBtn := .Get "primaryBtn" -}}
+{{- $primaryUrl := .Get "primaryUrl" -}}
+{{- $secondaryBtn := .Get "secondaryBtn" -}}
+{{- $secondaryUrl := .Get "secondaryUrl" -}}
 
 <div><a id="td-block-hero-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }}{{ if $background }} hero-with-bg{{ end }}"{{ with $background }} style="--hero-bg-image: url({{ . }})"{{ end }}>
@@ -16,9 +20,12 @@
   {{- with $tagline -}}
   <p class="hero-simple__tagline mb-4">{{ . }}</p>
   {{- end -}}
-  <div class="hero-simple__content">
-    {{ .Inner | markdownify }}
+  {{- with $primaryBtn -}}
+  <div class="l-primary-buttons">
+    <a href="{{ $primaryUrl }}" class="btn btn-lg btn-primary">{{ . }}</a>
+    {{- with $secondaryBtn }}<a href="{{ $secondaryUrl }}" class="btn btn-lg btn-secondary">{{ . }}</a>{{ end -}}
   </div>
+  {{- end -}}
 </div>
 </div>
 </div>
