--- a/layouts/_shortcodes/homepage/otel-feature.html
+++ b/layouts/_shortcodes/homepage/otel-feature.html
@@ -26,7 +26,7 @@
     {{- with $url }}</a>{{ end -}}
   </h3>
   <div class="otel-feature__description">
-    {{ .Inner | markdownify }}
+    {{ .Inner | .Page.RenderString }}
   </div>
 </div>
 
