--- a/layouts/_shortcodes/homepage/adopters-showcase.html
+++ b/layouts/_shortcodes/homepage/adopters-showcase.html
@@ -1,4 +1,4 @@
-{{ $color := .Get "color" | default "light" -}}
+{{ $color := .Get "color" | default "white" -}}
 {{ $title := .Get "title" | default "Trusted by" -}}
 {{ $limit := .Get "limit" | default 12 -}}
 {{ $showCta := .Get "showCta" | default true -}}
