--- a/layouts/_shortcodes/homepage/otel-features.html
+++ b/layouts/_shortcodes/homepage/otel-features.html
@@ -1,4 +1,4 @@
-{{ $color := .Get "color" | default "light" -}}
+{{ $color := .Get "color" | default "white" -}}
 {{ $columns := .Get "columns" | default "3" -}}
 
 <div><a id="td-block-otel-features-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
