--- a/layouts/_shortcodes/homepage/hero-search.html
+++ b/layouts/_shortcodes/homepage/hero-search.html
@@ -21,11 +21,11 @@
               autocomplete="off">
           </div>
         </div>
-        {{- with .Inner }}
+        {{ with .Inner }}
         <div class="hero-search__extra">
           {{ . | $.Page.RenderString }}
         </div>
-        {{- end }}
+        {{ end }}
       </div>
     </div>
   </div>
