--- a/layouts/_shortcodes/homepage/hero.html
+++ b/layouts/_shortcodes/homepage/hero.html
@@ -1,21 +1,21 @@
-{{- $color := .Get "color" | default "primary" -}}
-{{- $tagline := .Get "tagline" -}}
-{{- $useLogo := .Get "useLogo" | default false -}}
-{{- $background := .Get "background" -}}
+{{ $color := .Get "color" | default "primary" }}
+{{ $tagline := .Get "tagline" }}
+{{ $useLogo := .Get "useLogo" | default false }}
+{{ $background := .Get "background" }}
 
 <div><a id="td-block-hero-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }}{{ if $background }} hero-with-bg{{ end }}"{{ with $background }} style="--hero-bg-image: url({{ . }})"{{ end }}>
 <div class="col">
 <div class="container">
 <div class="hero-simple text-center pt-5 pb-0">
-  {{- if $useLogo -}}
+  {{ if $useLogo }}
   <div class="hero-simple__logo mb-4">
     <img src="/img/logos/opentelemetry-horizontal-color.svg" alt="OpenTelemetry" class="hero-simple__logo-img">
   </div>
-  {{- end -}}
-  {{- with $tagline -}}
+  {{ end }}
+  {{ with $tagline }}
   <p class="hero-simple__tagline mb-4">{{ . }}</p>
-  {{- end -}}
+  {{ end }}
   <div class="hero-simple__content">
     {{ .Inner | .Page.RenderString }}
   </div>
