--- a/layouts/_shortcodes/homepage/intro-section.html
+++ b/layouts/_shortcodes/homepage/intro-section.html
@@ -1,6 +1,6 @@
-{{ $color := .Get "color" | default "white" }}
-{{ $image := .Get "image" }}
-{{ $imageAlt := .Get "imageAlt" }}
+{{ $color := .Get "color" | default "white" -}}
+{{ $image := .Get "image" -}}
+{{ $imageAlt := .Get "imageAlt" -}}
 
 <div><a id="td-block-intro-{{ .Ordinal }}" class="td-offset-anchor"></a></div>
 <section class="row td-box td-box--{{ $color }} intro-section">
@@ -10,11 +10,11 @@
         <div class="intro-text">
           {{ .Inner | .Page.RenderString }}
         </div>
-        {{ with $image }}
+        {{ with $image -}}
         <div class="intro-image">
           <img src="{{ . }}" alt="{{ $imageAlt }}" class="img-fluid">
         </div>
-        {{ end }}
+        {{ end -}}
       </div>
     </div>
   </div>
